# NSU-computer-and-peripherals

./: .gitignore  README.md
lab1/: CMakeLists.txt  README.md  main.cpp
lab1/lib/monte_carlo/: CMakeLists.txt
lab1/lib/random/: CMakeLists.txt
lab1/monte_carlo/: monte_carlo.cpp  monte_carlo.h
lab1/monte_carlo/point/random/: random.h
lab1/report/: report_lab_1.latex
lab1/src/: CMakeLists.txt  main.cpp
lab1/src/monte_carlo/: CMakeLists.txt  monte_carlo.cpp  monte_carlo.h
lab1/src/monte_carlo/point/random/: CMakeLists.txt  random.h
lab10/: .gitignore  README.md
lab10/BTB_benchmark/: BTB_benchmark.c  Makefile  btb_size_test.sh  create_branches.c  main.c  size_test  test  ways_test
lab10/outcome_predictor_benchmark/step1/: Makefile  main.c  test
lab10/outcome_predictor_benchmark/step2/: main.c  test
lab10/outcome_predictor_benchmark/step3/: Makefile  NOK.c  main.c  test
lab10/outcome_predictor_benchmark/step4/: Makefile  create_code.c  main.c  test
lab10/outcome_predictor_benchmark/step5/: main.c  test
lab10/outcome_predictor_benchmark/step6/: Makefile  main.c  test
lab2/: CMakeLists.txt  README.md  testing
lab2/lib/point/: CMakeLists.txt
lab2/lib/point/src/: point.cpp
lab2/lib/random/src/: random.cpp
lab2/src/: CMakeLists.txt  main.cpp
lab2/src/monte_carlo/: monte_carlo.cpp
lab2/src/monte_carlo/point/: CMakeLists.txt  point.h
lab3/: CMakeLists.txt  README.md  main.c  main_x86-64_O0.s  main_x86-64_O3.s  main_x86_O0.s  main_x86_O3.s
lab3/lib/monte_carlo/: CMakeLists.txt
lab3/lib/monte_carlo/include/: monte_carlo.h
lab3/lib/monte_carlo/src/: monte_carlo.c
lab3/lib/point/: CMakeLists.txt
lab3/lib/point/include/: point.h
lab3/lib/point/src/: point.c
lab3/lib/random/: CMakeLists.txt
lab3/src/: CMakeLists.txt  main.c  main_x86_O0.s  main_x86_O3.s
lab3/src/monte_carlo/: CMakeLists.txt  monte_carlo.c
lab3/src/monte_carlo/point/: CMakeLists.txt  point.c  point.h
lab3/src/monte_carlo/point/random/: CMakeLists.txt  random.h
lab4/: README.md  main_ARM_O0.s
lab4/src/: main.c  main_ARM_O0.s  main_ARM_O3.s
lab5/: CMakeLists.txt  README.md  main.cpp
lab5/src/: main.cpp
lab6/: CMakeLists.txt  README.md
lab6/src/: main.c
lab7/: CMakeLists.txt  README.md
lab7/src/: BLAS.cpp  default.cpp  manual.cpp
lab8/: CMakeLists.txt  README.md  main.c  main.cpp
lab9/: CMakeLists.txt  README.md  main.cpp
